<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEAEA"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    android:paddingBottom="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:textAlignment="gravity"
        tools:ignore="UselessLeaf">
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" />
        <TextView
            android:id="@+id/player1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_1" />
        <EditText
            android:id="@+id/edit_player1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="0.2"
            android:hint="@string/player_1"/>
        <TextView
            android:id="@+id/player2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_2" />
        <EditText
            android:id="@+id/edit_player2"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.2"
            android:layout_marginVertical="5dp"
            android:hint="@string/player_2" />

        <TextView
            android:id="@+id/matchFormat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_format" />

        <Spinner
            android:id="@+id/spinner_match_format"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.2"/>
        <Button
            android:id="@+id/button_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="0.2"
            android:text="@string/take_picture"
            android:onClick="takePicture"/>

        <ImageView
            android:id="@+id/match_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.4"
            android:src="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/startMatch_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.4"
            android:onClick="newMatch"
            android:text="@string/startMatch" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>