<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEAEA"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    android:paddingBottom="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:textAlignment="gravity"
            tools:ignore="UselessLeaf">
        <TextView
            android:id="@+id/match_id"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:textSize="40sp"
            android:textColor="#000"/>
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:textSize="20sp"
                android:textColor="#000">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp"
                >
                    <TextView
                        android:id="@+id/match_player1"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:text="@string/player_1"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/match_score1"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:text="score1"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp"
                    >
                    <TextView
                        android:id="@+id/match_player2"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:text="@string/player_2"
                        android:textSize="20sp"
                        android:textColor="#000"/>
                    <TextView
                        android:id="@+id/match_score2"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:text="score2"
                        android:textSize="20sp"
                        android:textColor="#000"/>

                </LinearLayout>
        </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>